Add more content

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 </head>
 <body>
 
-  <section class="grid">
-    <div class="unit xs-1 s-1 m-1 m-1-2 l-1-4">
-      <a class="hover-box" href="#">
+  <section class="grid text-center">
+    <div class="unit [ xs-1 s-1 m-1 m-1-2 l-1-4 ]">
+      <a class="hover-box block relative crop" href="#">
         <div class="embed embed-3by2">
           <img class="hover-box-img embed-item" src="img/orange.jpg" alt="">
         </div>
-        <div>
+        <div class="hover-box-caption island-1-4 w-1 absolute">
           <h2>Orange butterflies</h2>
         </div>
       </a>
